--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 /*font awesome icons*/
 
-@import url('https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
+@import url('Images/backg.jpg');
 html {
     scroll-behavior: smooth;
 }
